--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <li class="item">
         <a class="link mail" href="mailto:info@devstudio.com">
             <svg class="icon icon-mail" width="16" height="12">
-                <use xlink:href="./images/sprite2.svg#icon-mailcvg"></use>
+                <use xlink:href="./images/sprite.svg#icon-mail"></use>
             </svg>
             info@devstudio.com</a>
         </li>
         <li class="item"><a class="link tel" href="tel:+380961111111">
             <svg class="icon icon-tel" width="16" height="12">
-                <use xlink:href="./images/sprite2.svg#icon-telsvg"></use>
+                <use xlink:href="./images/sprite.svg#icon-phone"></use>
             </svg>+38 096 111 11 11</a></li>
         </ul>
         </div>
@@ -59,26 +59,26 @@
                 <h2 hidden class="section-title features-title">Особливості</h2>
                 <ul class="features list">
                     <li class="item">
-                        <img class="pages" src="./images/antena.svg" alt="Увага до деталей">
+                        <img class="pages" src="./images/antenna1.svg" alt="Увага до деталей">
                         <h3 class="title">Увага до деталей</h3>
                         <p class="text">
                             Ідейні міркування, i навіть початок повсякденної роботи з формування позиції.
                         </p>
                     </li>
                     <li class="item">
-                        <img class="pages" src="./images/time.svg.svg" alt="Пунктуальність">
+                        <img class="pages" src="./images/clock1.svg" alt="Пунктуальність">
                         <h3 class="title">Пунктуальність</h3>
                         <p class="text">
                             Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                         </p>
                     </li>
                     <li class="item">
-                        <img class="pages" src="./images/comp.svg.svg" alt="Планування">
+                        <img class="pages" src="./images/vector.svg" alt="Планування">
                         <h3 class="title">Планування</h3>
                         <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="item">
-                        <img class="pages" src="./images/astronaut.svg.svg" alt="Сучасні технології">
+                        <img class="pages" src="./images/astronaut1.svg" alt="Сучасні технології">
                         <h3 class="title">Сучасні технології</h3>
                         <p class="text">
                             Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -102,26 +102,26 @@
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                                         class="icon icon-instagram" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-inssvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-instagram1" width="20" height="20"></use>
                                     </svg></a>
                             </li>
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#">
                                     <svg class="icon icon-twitter" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-twitsvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-twitter1" width="20" height="20"></use>
                                     </svg></a>
                             </li>
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                                         class="icon icon-facebook" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-facesvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-facebook1" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                                         class="icon icon-linkedin" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-linkedinsvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-linkedin1" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -135,26 +135,26 @@
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                                         class="icon icon-instagram" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-inssvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-instagram1" width="20" height="20"></use>
                                     </svg></a>
                             </li>
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#">
                                     <svg class="icon icon-twitter" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-twitsvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-twitter1" width="20" height="20"></use>
                                     </svg></a>
                             </li>
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                                         class="icon icon-facebook" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-facesvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-facebook1" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                                         class="icon icon-linkedin" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-linkedinsvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-linkedin1" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -168,26 +168,26 @@
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                                         class="icon icon-instagram" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-inssvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-instagram1" width="20" height="20"></use>
                                     </svg></a>
                             </li>
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#">
                                     <svg class="icon icon-twitter" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-twitsvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-twitter1" width="20" height="20"></use>
                                     </svg></a>
                             </li>
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                                         class="icon icon-facebook" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-facesvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-facebook1" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                                         class="icon icon-linkedin" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-linkedinsvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-linkedin1" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -201,26 +201,26 @@
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                                         class="icon icon-instagram" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-inssvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-instagram1" width="20" height="20"></use>
                                     </svg></a>
                             </li>
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#">
                                     <svg class="icon icon-twitter" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-twitsvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-twitter1" width="20" height="20"></use>
                                     </svg></a>
                             </li>
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                                         class="icon icon-facebook" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-facesvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-facebook1" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                                         class="icon icon-linkedin" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-linkedinsvg" width="20" height="20"></use>
+                                        <use xlink:href="./images/sprite.svg#icon-linkedin1" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -235,40 +235,40 @@
             <h2 class="section-title customers">Постійні клієнти</h2>
             <ul class="customers-list list">
                 <li>
-                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#">
+                    <a href="#" class="customers-link" target="_blank" rel="noopener noreferrer">
                         <svg
                             class="icon icon-client1" width="106" height="60">
-                            <use xlink:href="./images/sprite1.svg#icon-one"></use>
+                            <use xlink:href="./images/sprite.svg#icon-client1"></use>
                         </svg></a>
                 </li>
                 <li>
-                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                    <a href="#" class="customers-link" target="_blank" rel="noopener noreferrer"><svg
                             class="icon icon-client2" width="106" height="60">
-                            <use xlink:href="./images/sprite1.svg#icon-two"></use>
+                            <use xlink:href="./images/sprite.svg#icon-client2"></use>
                         </svg></a>
                 </li>
                 <li>
-                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                    <a href="#" class="customers-link" target="_blank" rel="noopener noreferrer"><svg
                             class="icon icon-client3" width="106" height="60">
-                            <use xlink:href="./images/sprite1.svg#icon-three"></use>
+                            <use xlink:href="./images/sprite.svg#icon-client3"></use>
                         </svg></a>
                 </li>
                 <li>
-                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                    <a href="#" class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                             class="icon icon-client4" width="106" height="60">
-                            <use xlink:href="./images/sprite1.svg#icon-four"></use>
+                            <use xlink:href="./images/sprite.svg#icon-client4"></use>
                         </svg></a>
                 </li>
                 <li>
-                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                    <a href="#" class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                             class="icon icon-client5" width="106" height="60">
-                            <use xlink:href="./images/sprite1.svg#icon-five"></use>
+                            <use xlink:href="./images/sprite.svg#icon-client5"></use>
                         </svg></a>
                 </li>
                 <li>
-                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                    <a href="#" class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                             class="icon icon-client6" width="106" height="60">
-                            <use xlink:href="./images/sprite1.svg#icon-six"></use>
+                            <use xlink:href="./images/sprite.svg#icon-client6"></use>
                         </svg></a>
                 </li>
             </ul>
@@ -302,26 +302,26 @@
                 <li>
                     <a class="footer-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                             class="icon icon-instagram" width="20" height="20">
-                            <use xlink:href="./images/sprite.svg#icon-inssvg" width="20" height="20"></use>
+                            <use xlink:href="./images/sprite.svg#icon-instagram1" width="20" height="20"></use>
                         </svg></a>
                 </li>
                 <li>
                     <a class="footer-social-link" target="_blank" rel="noopener noreferrer" href="#">
                         <svg class="icon icon-twitter" width="20" height="20">
-                            <use xlink:href="./images/sprite.svg#icon-twitsvg" width="20" height="20"></use>
+                            <use xlink:href="./images/sprite.svg#icon-twitter1" width="20" height="20"></use>
                         </svg></a>
                 </li>
                 <li>
                     <a class="footer-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                             class="icon icon-facebook" width="20" height="20">
-                            <use xlink:href="./images/sprite.svg#icon-facesvg" width="20" height="20"></use>
+                            <use xlink:href="./images/sprite.svg#icon-facebook1" width="20" height="20"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
                     <a class="footer-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                             class="icon icon-linkedin" width="20" height="20">
-                            <use xlink:href="./images/sprite.svg#icon-linkedinsvg" width="20" height="20"></use>
+                            <use xlink:href="./images/sprite.svg#icon-linkedin1" width="20" height="20"></use>
                         </svg>
                     </a>
                 </li>
