--- a/portfolio.html
+++ b/portfolio.html
@@ -23,19 +23,19 @@
             <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
             <li><a class="link" href="#contacts">Контакти</a></li>
         </ul>
-        <ul class="contact list">
-            <li class="item">
-                <a class="link mail" href="mailto:info@devstudio.com">
-                    <svg class="icon icon-mail" width="16" height="12">
-                        <use xlink:href="./images/sprite2.svg#icon-mailcvg"></use>
-                    </svg>
-                    info@devstudio.com</a>
-            </li>
-            <li class="item"><a class="link tel" href="tel:+380961111111">
-                    <svg class="icon icon-tel" width="16" height="12">
-                        <use xlink:href="./images/sprite2.svg#icon-telsvg"></use>
-                    </svg>+38 096 111 11 11</a></li>
-        </ul>
+    <ul class="contact list">
+        <li class="item">
+            <a class="link mail" href="mailto:info@devstudio.com">
+                <svg class="icon icon-mail" width="16" height="12">
+                    <use xlink:href="./images/sprite.svg#icon-mail"></use>
+                </svg>
+                info@devstudio.com</a>
+        </li>
+        <li class="item"><a class="link tel" href="tel:+380961111111">
+                <svg class="icon icon-tel" width="16" height="12">
+                    <use xlink:href="./images/sprite.svg#icon-phone"></use>
+                </svg>+38 096 111 11 11</a></li>
+    </ul>
         </div>
         </header>
     <main>
@@ -167,26 +167,26 @@
                 <li>
                     <a class="footer-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                             class="icon icon-instagram" width="20" height="20">
-                            <use xlink:href="./images/sprite.svg#icon-inssvg" width="20" height="20"></use>
+                            <use xlink:href="./images/sprite.svg#icon-instagram1" width="20" height="20"></use>
                         </svg></a>
                 </li>
                 <li>
                     <a class="footer-social-link" target="_blank" rel="noopener noreferrer" href="#">
                         <svg class="icon icon-twitter" width="20" height="20">
-                            <use xlink:href="./images/sprite.svg#icon-twitsvg" width="20" height="20"></use>
+                            <use xlink:href="./images/sprite.svg#icon-twitter1" width="20" height="20"></use>
                         </svg></a>
                 </li>
                 <li>
                     <a class="footer-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                             class="icon icon-facebook" width="20" height="20">
-                            <use xlink:href="./images/sprite.svg#icon-facesvg" width="20" height="20"></use>
+                            <use xlink:href="./images/sprite.svg#icon-facebook1" width="20" height="20"></use>
                         </svg>
                     </a>
                 </li>
                 <li>
                     <a class="footer-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                             class="icon icon-linkedin" width="20" height="20">
-                            <use xlink:href="./images/sprite.svg#icon-linkedinsvg" width="20" height="20"></use>
+                            <use xlink:href="./images/sprite.svg#icon-linkedin1" width="20" height="20"></use>
                         </svg>
                     </a>
                 </li>
