--- a/index.html
+++ b/index.html
@@ -87,7 +87,16 @@
                 </ul>
             </div>
         </section>
-    
+    <section class="section">
+        <div class="container">
+            <h2 class="section-title work-title">Чим ми займаємося</h2>
+            <ul class="work list">
+                <li class="item"><img src="./images/img.jpg" alt="друкує код" width="370"></li>
+                <li class="item"><img src="./images/img(1).jpg" alt="тримає телефон" width="370"></li>
+                <li class="item"><img src="./images/img(2).jpg" alt="тримає планшет" width="370"></li>
+            </ul>
+        </div>
+    </section>
 
     <!--Примітка-->
         <section class="section team-background">
