--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
                 <ul class="team list">
                     <li class="item">
                         <img class="image" src="./images/img(3).jpg" alt="Ігор Дем'яненко - Frontend Designer" width="270">
-                        <h3 class="title">Ігор Дем'яненко</h3>
-                        <p class="text">Frontend Designer</p>
+                        <div class="description">
+                        <h3 class="description-title">Ігор Дем'яненко</h3>
+                        <p class="desc">Frontend Designer</p>
+                        </div>
                         <ul class="list socials">
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
@@ -138,8 +140,10 @@
                     <li class="item">
                         <img class="image" src="./images/img(4).jpg" alt="Ольга Рєпіна - Frontend Developer"
                             width="270">
-                        <h3 class="title">Ольга Рєпіна</h3>
-                        <p class="text">Frontend Developer</p>
+                            <div class="description">
+                        <h3 class="description-title">Ольга Рєпіна</h3>
+                        <p class="desc">Frontend Developer</p>
+                        </div>
                         <ul class="list socials">
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
@@ -170,9 +174,12 @@
                         </ul>
                     </li>
                     <li class="item">
+                        
                         <img class="image" src="./images/img(5).jpg" alt="Микола Тарасов - Marketing" width="270">
-                        <h3 class="title">Микола Тарасов</h3>
-                        <p class="text">Marketing</p>
+                        <div class="description">
+                        <h3 class=" description-title">Микола Тарасов</h3>
+                        <p class="desc">Marketing</p>
+                        </div>
                         <ul class="list socials">
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
@@ -204,8 +211,10 @@
                             </li>
                     <li class="item">
                         <img class="image" src="./images/img(6).jpg" alt="Михайло Єрмаков" width="270">
-                        <h3 class="title">Михайло Єрмаков</h3>
-                        <p class="text">UI Designer</p>
+                        <div class="description">>
+                        <h3 class="description-title">Михайло Єрмаков</h3>
+                        <p class="desc">UI Designer</p>
+                        </div>
                         <ul class="list socials">
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
@@ -297,11 +306,11 @@
                     target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
                 <!-- Контакти -->
                 <ul class="contact-footer list-tel">
-                    <li class="item">
-                        <a class="link" target="_blank" rel="noopener noreferrer"
+                    <li class="item list">
+                        <a class="link list" target="_blank" rel="noopener noreferrer"
                             href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
-                    <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="item list"><a class="link list" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
