--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
                 <!-- Портфоліо -->
                 <div class="container-prtf">
                 <ul class="portfolio list">
-                    <li class="item">
+                    <li class="item-port">
                         <a class="link" href="#">
                             <img class="img" src="./images/ptf.jpg" alt="Технокряк" width="370">
                             <div class="signature">
@@ -64,7 +64,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="item-port">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer">
                             <img class="img" src="./images/ptf2.jpg" alt="Постер New Orlean vs Golden Star"
                                 width="370">
@@ -74,7 +74,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="item-port">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer">
                             <img class="img" src="./images/ptf3.jpg" alt="Ресторан Seafood" width="370">
                             <div class="signature">
@@ -83,7 +83,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="item-port">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer"><img class="img"
                                 src="./images/ptf4.jpg" alt="Проєкт Prime" width="370">
                             <div class="signature">
@@ -92,7 +92,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="item-port">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer"><img class="img"
                                 src="./images/ptf5.jpg" alt="Проєкт Boxes" width="370">
                             <div class="signature">
@@ -101,7 +101,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="item-port">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer"><img class="img"
                                 src="./images/ptf6.jpg" alt="Inspiration has no Borders" width="370">
                             <div class="signature">
@@ -110,7 +110,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="item-port">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer"><img class="img"
                                 src="./images/ptf7.jpg" alt="Видання Limited Edition" width="370">
                             <div class="signature">
@@ -119,7 +119,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="item-port">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer"><img class="img"
                                 src="./images/ptf8.jpg" alt="Проєкт LAB" width="370">
                             <div class="signature">
@@ -128,7 +128,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="item-port">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer"><img class="img"
                                 src="./images/ptf9.jpg" alt="Growing Business" width="370">
                             <div class="signature">
@@ -152,12 +152,12 @@
                     href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.427058,30.5351338,18.25z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
                     target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
                 <!-- Контакти -->
-                <ul class="contact-footer list-tel">
-                    <li class="item">
-                        <a class="link" target="_blank" rel="noopener noreferrer"
+                <ul class="contact-footer ">
+                    <li class="item list">
+                        <a class="link list" target="_blank" rel="noopener noreferrer"
                             href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
-                    <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="item list"><a class="link list" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
