--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             </li>
                     <li class="item">
                         <img class="image" src="./images/img(6).jpg" alt="Михайло Єрмаков" width="270">
-                        <div class="description">>
+                        <div class="description">
                         <h3 class="description-title">Михайло Єрмаков</h3>
                         <p class="desc">UI Designer</p>
                         </div>
