--- a/index.html
+++ b/index.html
@@ -217,10 +217,13 @@
                         </div>
                         <ul class="list socials">
                             <li>
-                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
-                                        class="icon icon-instagram" width="20" height="20">
-                                        <use xlink:href="./images/sprite.svg#icon-instagram1" width="20" height="20"></use>
-                                    </svg></a>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer"  href="#">
+                                    <svg class="icon icon-instagram" width="20" height="20">
+                                        <use
+                                         xlink:href="./images/sprite.svg#icon-instagram1" width="20"
+                                          height="20">
+                                        </use></svg>
+                                    </a>
                             </li>
                             <li>
                                 <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#">
@@ -272,19 +275,19 @@
                         </svg></a>
                 </li>
                 <li>
-                    <a href="#" class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                             class="icon icon-client4" width="106" height="60">
                             <use xlink:href="./images/sprite.svg#icon-client4"></use>
                         </svg></a>
                 </li>
                 <li>
-                    <a href="#" class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                             class="icon icon-client5" width="106" height="60">
                             <use xlink:href="./images/sprite.svg#icon-client5"></use>
                         </svg></a>
                 </li>
                 <li>
-                    <a href="#" class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
                             class="icon icon-client6" width="106" height="60">
                             <use xlink:href="./images/sprite.svg#icon-client6"></use>
                         </svg></a>
